# langextract-transformers

./: LICENSE  README.md  pyproject.toml  test_plugin.py
langextract_hftransformers/: __init__.py  provider.py
