[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-hftransformers"
version = "0.1.0"
description = "LangExtract provider plugin for HfTransformers"
readme = "README.md"
authors = [{ name = "King Dragon" }]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "langextract>=1.0.0",
    "transformers>=4.55.2",
    "torch>=2.8.0",
    "accelerate>=1.10.0",
]

[project.entry-points."langextract.providers"]
hftransformers = "langextract_hftransformers.provider:HfTransformersLanguageModel"

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_hftransformers*"]
